--- a/config.yml
+++ b/config.yml
@@ -20,11 +20,37 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - run: echo "Say goodbye to YAML!"
+  # print hello
+  print_hello:
+    docker:
+     - image: cimg/base:2022.05
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD
+    steps:
+      - run: echo "hello"
+
+  # print world
+  print_world:
+    docker:
+     - image: cimg/base:2022.05
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD
+    steps:
+      - run: echo "world"
 
 workflows:
   # Name of workflow
   hello_and_goodbye:
+  hello_and_world:
     # List of jobs that will run
     jobs:
       - say_hello
       - say_goodbye
+
+      - print_hello
+      - print_world
+        - requires:
+          - print_hello
+      
