--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ workflows:
     # List of jobs that will run
     jobs:
       - print_hello
-      - print_world
+      - print_world:
         - requires:
           - print_hello
       
