--- a/config.yml
+++ b/config.yml
@@ -1,34 +1,21 @@
-# CircleCI configuration file
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
 jobs:
-  # print hello
   print_hello:
     docker:
-     - image: cimg/base:2022.05
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD
+      - image: circleci/node:13.8.0
     steps:
-      - run: echo "hello"
-
-  # print world
+      - run: echo hello
   print_world:
     docker:
-     - image: cimg/base:2022.05
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD
+      - image: circleci/node:13.8.0
     steps:
-      - run: echo "world"
-
+      - run: echo world
 workflows:
-  # Name of workflow
-  hello_and_world:
-    # List of jobs that will run
+  welcome:
     jobs:
       - print_hello
       - print_world:
-        - requires:
-          - print_hello
+          requires:
+            - print_hello
       
